# byor-rs

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: lib.rs  main.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
src/: connection.rs  epoll.rs  lib.rs  mio.rs  polling.rs  startup.rs
tests/: server_client.rs
