[package]
name = "byor"
version = "0.1.0"
edition = "2021"

[registries.crates-io]
protocol = "sparse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["server", "client"]

[workspace.dependencies]
socket2 = "0.4.7"
log = "0.4.17"
pretty_env_logger = "0.4.0"
byteorder = "1.4.3"
mio = { version = "0.8.5", features = ["os-poll"] }
polling = "2.5.2"
epoll = "4.3.1"

[dependencies]
byteorder = { workspace = true }
log = { workspace = true }
socket2 = { workspace = true }
polling = { workspace = true }
epoll = { workspace = true }
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
mio = { workspace = true, features = ["os-poll", "os-ext"] }

[dev-dependencies]
server = { path = "server" }
client = { path = "client" }
